<resources>
    <string name="app_name">MovieDatabase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="enter_movie_title">enter movie title</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="trailer">Trailer</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="search_menu">Search</string>
    <string name="options_menu">Options</string>
    <string name="documentary">Documentary</string>
    <string name="animation">Animation</string>
    <string name="mystery">Mystery</string>
    <string name="music">Music</string>
    <string name="fantasy">Fantasy</string>
    <string name="family">Family</string>
    <string name="drama">Drama</string>
    <string name="adventure">Adventure</string>
    <string name="science_fiction">Science fiction</string>
    <string name="crime">Crime</string>
    <string name="romantic">Romantic</string>
    <string name="thriller">Thriller</string>
    <string name="comedy">Comedy</string>
    <string name="horror">Horror</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="punjabi">Punjabi</string>
    <string name="sort_by">Sort by</string>
    <string name="popularity_desc">Popularity (desc)</string>
    <string name="popularity_asc">Popularity (asc)</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_watch_later_movies">My Watch Later Movies</string>
    <string name="title_activity_splash">splash</string>
</resources>
